--- a/src/html/inedx.html
+++ b/src/html/inedx.html
@@ -3,12 +3,18 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
+      @@include('./Header/index.html')
       <main>
         <h1>Hello</h1>
         <h2 style="font-weight: 700">WORLD</h2>
         <p>Создание сайтов</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing.</p>
       </main>
+      <footer>
+        <div class="container">
+          io
+        </div>
+      </footer>
     </div>
   </body>
   @@include('./utils/includes.html')
