--- a/src/html-components/Header/Contacts/index.html
+++ b/src/html-components/Header/Contacts/index.html
@@ -1,41 +1,35 @@
-<div class="header__contacts">
+<div class="contacts-wrapper">
   <div class="container">
-    <div class="contacts__social">
-      <a href="">
-        <span class="social-item">
+    <div class="contacts">
+      <div class="contacts__social">
+        <a href="#" class="social-item">
           @@include('../assets/social/skype.svg')
-        </span>
-      </a>
-      <a href="">
-        <span class="social-item">
+        </a>
+        <a href="#" class="social-item">
           @@include('../assets/social/telegram.svg')
-        </span>
-      </a>
-      <a href="">
-        <span class="social-item">
+        </a>
+        <a href="#" class="social-item">
           @@include('../assets/social/wapp.svg')
-        </span>
-      </a>
-      <a href="">
-        <span class="social-item">
+        </a>
+        <a href="#" class="social-item">
           @@include('../assets/social/viber.svg')
-        </span>
-      </a>
-    </div>
-    <div class="contacts__contact">
-      <div class="contact-phone">
-        <span>@@include('../assets/phone.svg')</span>
-        <a href="mailto:depthsseo@yandex.ru">depthsseo@yandex.ru</a>
+        </a>
       </div>
-      <div class="contact-email">
-        <span>@@include('../assets/comments.svg')</span>
-        <a href="tel:+375259153989">+375 25 915 39 89</a>
+      <div class="contacts__contact">
+        <div class="contact-phone">
+          <span>@@include('../assets/comments.svg')</span>
+          <a href="tel:+375259153989">+375 25 915 39 89</a>
+        </div>
+        <div class="contact-email">
+          <span>@@include('../assets/phone.svg')</span>
+          <a href="mailto:depthsseo@yandex.ru">depthsseo@yandex.ru</a>
+        </div>
       </div>
-    </div>
-    <div class="contacts__lang">
-      <a href="#">RU</a>
-      <a href="#">EN</a>
-      <a href="#">PL</a>
+      <div class="contacts__lang">
+        <a href="#">RU</a>
+        <a href="#">EN</a>
+        <a href="#">PL</a>
+      </div>
     </div>
   </div>
 </div>
