--- a/src/html-components/Header/Nav/index.html
+++ b/src/html-components/Header/Nav/index.html
@@ -1,8 +1,9 @@
-<nav>
-  <div class="logo">
+<nav class="nav">
+  <a href="#" class="nav__logo">
     @@include('../assets/logo.svg')
-  </div>
-  <ul>
+  </a>
+  
+  <ul class="nav__menu">
     <li><a href="#">Главная</a></li>
     <li><a href="#">Создание сайтов</a></li>
     <li><a href="#">Продвижение сайтов</a></li>
