--- a/src/html-components/Header/index.html
+++ b/src/html-components/Header/index.html
@@ -1,12 +1,21 @@
-<header>
+<header class="header">
   @@include('./Header/Contacts/index.html')
   <div class="container">
     @@include('./Header/Nav/index.html')
 
-    <h1 class="header__title">SEO продвижение Вашего сайта</h1>
-    <p class="header__subtitle">Приумножьте свой бизнес используя опыт команды DepthsSEO!</p>
+    <div class="header__content">
+      <h1 class="title">SEO продвижение Вашего сайта</h1>
+      <p class="subtitle">Приумножьте свой бизнес используя опыт команды DepthsSEO!</p>
+    </div>
   </div>
-  <div class="header-bg-image">
-    <img src="../../assets/main-header-bg.jpg" alt="" />
+  <div class="header__bg-image">
+    <picture>
+      <source media="(min-width: 1024px)"
+              srcset="@@imgSizeLgPath">
+      <source media="(min-width: 360px)"
+              srcset="@@imgSizeMdPath">
+      <source srcset="@@imgSizeSmPath">
+      <img src="@@imgDefault" alt=""/>
+    </picture>
   </div>
 </header>
