--- a/src/html-components/Header/Nav/index.html
+++ b/src/html-components/Header/Nav/index.html
@@ -1,4 +1,10 @@
 <nav class="nav">
+  <button class="nav__hamburger-btn">
+    <span></span>
+    <span></span>
+    <span></span>
+  </button>
+
   <a href="#" class="nav__logo">
     @@include('../assets/logo.svg')
   </a>
