--- a/src/html-components/Header/index.html
+++ b/src/html-components/Header/index.html
@@ -4,8 +4,8 @@
     @@include('./Header/Nav/index.html')
 
     <div class="header__content">
-      <h1 class="title">SEO продвижение Вашего сайта</h1>
-      <p class="subtitle">Приумножьте свой бизнес используя опыт команды DepthsSEO!</p>
+      <h1 class="title">@@title</h1>
+      <p class="subtitle">@@subtitle</p>
     </div>
   </div>
   <div class="header__bg-image">
