--- a/src/html/inedx.html
+++ b/src/html/inedx.html
@@ -4,6 +4,8 @@
   <body>
     <div class="wrapper">
       @@include('./Header/index.html', {
+        title: 'SEO продвижение Вашего сайта',
+        subtitle: 'Приумножьте свой бизнес используя опыт команды DepthsSEO!',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
         imgSizeMdPath: './assets/header-bg_md.jpg',
         imgSizeLgPath: './assets/header-bg_lg.jpg',
