--- a/src/html-components/utils/includes.html
+++ b/src/html-components/utils/includes.html
@@ -1,1 +1,5 @@
+<script
+  src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+  integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+  crossorigin="anonymous"></script>
 <script src="./js/scripts.js"></script>
