--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -449,32 +449,32 @@
             </p>
 
             <div class="blog-item__wrapper">
-              @@include('./BlogItem/index.html', {
+              @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
                 'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
               })
-              @@include('./BlogItem/index.html', {
+              @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
                 'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
               })
-              @@include('./BlogItem/index.html', {
+              @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
                 'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
               })
-              @@include('./BlogItem/index.html', {
+              @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
                 'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
               })
-              @@include('./BlogItem/index.html', {
+              @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
                 'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
               })
-              @@include('./BlogItem/index.html', {
+              @@include('./BlogCard/index.html', {
                 'imgUrl': './assets/image/context.jpg',
                 'title': 'Типы сайтов',
                 'text': 'Работа Seo-специалиста с типографом. Актуальность и возможности....',
@@ -488,8 +488,9 @@
 
           @@include('./Breadcrumbs/index.html')
 
-          
+          @@include('./Recomendation/index.html')
         </div>
+
       </main>
 
       @@include('./Footer/index.html')
