--- a/src/html-components/Recomendation/index.html
+++ b/src/html-components/Recomendation/index.html
@@ -1,19 +1,19 @@
 <section class="recomendation">
   <div class="recomendation__header">
     <div class="social">
-      <a href="#" class="social-item">
+      <a href="#" class="social-item social-item_instagram">
         @@include('../assets/social/instagram.svg')
       </a>
-      <a href="#" class="social-item">
+      <a href="#" class="social-item social-item_fb">
         @@include('../assets/social/facebook.svg')
       </a>
-      <a href="#" class="social-item">
+      <a href="#" class="social-item social-item_vk">
         @@include('../assets/social/vk.svg')
       </a>
-      <a href="#" class="social-item">
+      <a href="#" class="social-item social-item_ok">
         @@include('../assets/social/ok.svg')
       </a>
-      <a href="#" class="social-item social-item_viber">
+      <a href="#" class="social-item social-item_twitter">
         @@include('../assets/social/twitter.svg')
       </a>
     </div>
