--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -4,8 +4,8 @@
   <body>
     <div class="wrapper">
       @@include('./Header/index.html', {
-        title: 'SEO продвижение Вашего сайта',
-        subtitle: 'Приумножьте свой бизнес используя опыт команды DepthsSEO!',
+        title: 'Блог о SEO',
+        subtitle: 'О самом интересном',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
         imgSizeMdPath: './assets/header-bg_md.jpg',
         imgSizeLgPath: './assets/header-bg_lg.jpg',
@@ -14,12 +14,6 @@
 
       <main>
         <div class="container">
-          @@include('./SectionTitle/index.html', {
-            title: 'Наша специализация',
-            textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-            underLineColor: '#828282',
-          })
-
           <section class="blog">
             @@include('./SectionTitle/index.html', {
               title: 'Свежие статьи по SEO',
