--- a/src/html/blog-item.html
+++ b/src/html/blog-item.html
@@ -3,25 +3,51 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./Header/index.html', {
-        title: 'SEO продвижение Вашего сайта',
-        subtitle: 'Приумножьте свой бизнес используя опыт команды DepthsSEO!',
-        imgSizeSmPath: './assets/header-bg_sm.jpg',
-        imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
-      })
+      @@include('./HeaderNoImage/index.html')
 
       <main>
         <div class="container">
-          @@include('./SectionTitle/index.html', {
-            title: 'Наша специализация',
-            textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-            underLineColor: '#828282',
-          })
-
-          
           @@include('./Breadcrumbs/index.html')
+         
+          <sectin class="blog-item-media">
+            @@include('./SectionTitle/index.html', {
+              title: 'Наша специализация',
+              textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
+              underLineColor: '#828282',
+            })
+
+            <div class="news-context">
+              <div class="news-context__main-image">
+                <img src="../assets/image/main-news-image.jpg" alt="">
+              </div>
+
+              <div class="news-context__text">
+                <p>
+                  Типограф — это инструмент, который подготавливает текст сайта к нормам экранной типографики, то есть использует только
+                  корректные знаки, символы и спецсимволы.
+                </p>
+                <br>
+                <p>
+                  <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>Типографы бывают в виде онлайн-сервисов или встраиваемых на сайт редакторов. Встроенные на сайт решения упрощают работу
+                  и не требуют обращения к сторонним ресурсам, но если у вас нет возможности внедрить типограф в ваш проект, это не
+                  критично, смело пользуйтесь онлайн решениями.
+                </p>
+                <br>
+                <p>
+                  <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>Чаще типографами пользуются вебмастера и копирайтеры. Для SEO-специалиста данный инструмент позволяет привести
+                  публикации к стандарту типографики и соответственно улучшить качество страницы. Грамотные, легкие для восприятия тексты
+                  понравятся аудитории вашего сайта и обязательно будут отмечены поисковыми алгоритмами.
+                </p>
+                <br>
+                <p>
+                  <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>Набор текста может сопровождаться опечатками и орфографическими ошибками. Корректная расстановка знаков пунктуации,
+                  неразрывных пробелов, и тому подобного требует усидчивости, внимательности и времени на корректировку. Ручная правка и
+                  вычитывание текста долгий и сложный процесс. Использование типографа упрощает вашу работу, повышает результативность и
+                  качество обработки текста.
+                </p>
+              </div>
+            </div>
+          </sectin>
 
           @@include('./Recomendation/index.html')
         </div>
