--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -4,22 +4,16 @@
   <body>
     <div class="wrapper">
       @@include('./Header/index.html', {
-        title: 'SEO продвижение Вашего сайта',
-        subtitle: 'Приумножьте свой бизнес используя опыт команды DepthsSEO!',
-        imgSizeSmPath: './assets/header-bg_sm.jpg',
-        imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
+        title: 'FAQ',
+        subtitle: 'Ответы, на те самые вопросы',
+        imgSizeSmPath: './assets/header-bg-3_sm.jpg',
+        imgSizeMdPath: './assets/header-bg-3_md.jpg',
+        imgSizeLgPath: './assets/header-bg-3_lg.jpg',
+        imgDefault: './assets/header-bg-3_lg.jpg'
       })
 
       <main>
         <div class="container">
-          @@include('./SectionTitle/index.html', {
-            title: 'Наша специализация',
-            textColor: 'linear-gradient(180deg, #17A6D6 0%, #4B33A1 100%)',
-            underLineColor: '#828282',
-          })
-
           <section class="FAQ">
             @@include('./SectionTitle/index.html', {
               title: 'В чем мы сильны?',
