--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -52,7 +52,7 @@
               })
               @@include('./TeammateCard/index.html', {
                 imageSrc: '../assets/image/team-persone-image.jpg',
-                name: 'Кот котейкович',
+                name: 'Кот',
                 position: 'Животное',
                 skills: '<li>Мяу</li><li>Мур</li><li>Шшшш</li><li>Кусь</li><li>Пьёт молоко</li>'
               })
@@ -64,7 +64,7 @@
               })
               @@include('./TeammateCard/index.html', {
                 imageSrc: '../assets/image/team-persone-image.jpg',
-                name: 'Artur',
+                name: 'Гена',
                 position: 'Front-End',
                 skills: '<li>JavaScript</li><li>HTML</li><li>CSS</li><li>Figma</li>'
               })
@@ -87,7 +87,7 @@
               <p class="subtitle">Г. Минск ул. Хххххххххххххххх. ИП ххххххх, УНП хххххххх</p>
             
               <div id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d19549.21011024393!2d20.9891824!3d52.2315534!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2spl!4v1646488415738!5m2!1sen!2spl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d19549.21011024393!2d20.9891824!3d52.2315534!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2spl!4v1646488415738!5m2!1sen!2spl" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
               </div>
             </div>
           </section>
