--- a/src/html-components/Footer/index.html
+++ b/src/html-components/Footer/index.html
@@ -1,11 +1,19 @@
 <footer class="footer">
+  <div class="footer__bg-image">
+    <picture>
+      <source media="(min-width: 1024px)" srcset="../assets/footer-bg_lg.jpg">
+      <source media="(min-width: 440px)" srcset="../assets/footer-bg_md.jpg">
+      <source srcset="../assets/footer-bg_sm.jpg">
+      <img src="../assets/footer-bg_sm.jpg" alt="" />
+    </picture>
+  </div>
   <div class="container">
     <div class="d-flex flex-wrap">
       <div class="footer__social">
         <div class="logo">
           @@include('../assets/logo-2.svg')
         </div>
-  
+
         <div class="phone">
           <span>@@include('../assets/phone.svg')</span>
           <a href="tel:+375259153989">+375 25 915 39 89</a>
@@ -14,7 +22,7 @@
           <span>@@include('../assets/comments.svg')</span>
           <a href="mailto:depthsseo@yandex.ru">depthsseo@yandex.ru</a>
         </div>
-  
+
         <div class="footer__contacts-social">
           <a href="#" class="social-item">
             @@include('../assets/social/skype.svg')
@@ -29,7 +37,7 @@
             @@include('../assets/social/viber.svg')
           </a>
         </div>
-  
+
         <div class="footer__location">
           <span>@@include('../assets/location.svg')</span>
           <span>г. Минск. Республика Беларусь</span>
@@ -37,7 +45,7 @@
 
         <div class="footer__connect-us">
           <h4>Присоединяйтесь к нам:</h4>
-    
+
           <div class="connect-us__social">
             <a href="#" class="social-item">
               @@include('../assets/social/instagram.svg')
@@ -57,7 +65,7 @@
           </div>
         </div>
       </div>
-  
+
       <div class="list-wrapper">
         <ul class="footer_list footer__services">
           <h4>Услуги:</h4>
@@ -66,7 +74,7 @@
           <li><a href="#">Обучение</a></li>
           <button class="request-call-btn" type="button">Заказать звонок</button>
         </ul>
-    
+
         <ul class="footer_list footer__last-news">
           <h4>Последние новости:</h4>
           <li><a href="#">Типограф для SEO</a></li>
