--- a/src/html-components/Footer/Copyright/index.html
+++ b/src/html-components/Footer/Copyright/index.html
@@ -5,5 +5,5 @@
 
   <p>DEPTHSSEO.COM © 2012-2022 Все права защищены.</p>
 
-  <p>УНП 1232792442922</p>
+  <p class="copyright__unic-number">УНП 1232792442922</p>
 </div>
