add: mob-menu / fiixes

--- a/src/html-components/Header/Contacts/index.html
+++ b/src/html-components/Header/Contacts/index.html
@@ -1,7 +1,7 @@
 <div class="contacts-wrapper">
   <div class="container">
-    <div class="contacts">
-      <div class="contacts__social">
+    <div class="contacts-wrapper__contacts">
+      <div class="social">
         <a href="#" class="social-item">
           @@include('../assets/social/skype.svg')
         </a>
@@ -15,7 +15,7 @@
           @@include('../assets/social/viber.svg')
         </a>
       </div>
-      <div class="contacts__contact">
+      <div class="contact">
         <div class="contact-phone">
           <span>@@include('../assets/comments.svg')</span>
           <a href="tel:+375259153989">+375 25 915 39 89</a>
@@ -25,7 +25,7 @@
           <a href="mailto:depthsseo@yandex.ru">depthsseo@yandex.ru</a>
         </div>
       </div>
-      <div class="contacts__lang">
+      <div class="lang">
         <a href="#">RU</a>
         <a href="#">EN</a>
         <a href="#">PL</a>
