--- a/src/html/blog-item-media.html
+++ b/src/html/blog-item-media.html
@@ -57,6 +57,10 @@
                   <video data-isplayed="false" id="videoPlayer">
                     <source src="../assets/video/movie.mp4">
                   </video>
+
+                  <button class="btn-video">
+                    @@include('../assets/play-btn.svg')
+                  </button>
                 </div>
               </div>
             </sectin>
