--- a/src/html-components/Header/Nav/index.html
+++ b/src/html-components/Header/Nav/index.html
@@ -17,4 +17,47 @@
     <li><a href="#">FAQ</a></li>
     <li><a href="#">Контакты</a></li>
   </ul>
+
+  <div class="nav__menu-mobile">
+    <div class="lang">
+      <a href="#">RU</a>
+      <a href="#">EN</a>
+      <a href="#">PL</a>
+    </div>
+    
+    <ul>
+      <li><a href="#">Главная</a></li>
+      <li><a href="#">Создание сайтов</a></li>
+      <li><a href="#">Продвижение сайтов</a></li>
+      <li><a href="#">Блог</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Контакты</a></li>
+    </ul>
+    
+    <div class="social">
+      <a href="#" class="social-item">
+        @@include('../assets/social/skype.svg')
+      </a>
+      <a href="#" class="social-item">
+        @@include('../assets/social/telegram.svg')
+      </a>
+      <a href="#" class="social-item">
+        @@include('../assets/social/wapp.svg')
+      </a>
+      <a href="#" class="social-item">
+        @@include('../assets/social/viber.svg')
+      </a>
+    </div>
+
+    <div class="contact">
+      <div class="contact-phone">
+        <span>@@include('../assets/comments.svg')</span>
+        <a href="tel:+375259153989">+375 25 915 39 89</a>
+      </div>
+      <div class="contact-email">
+        <span>@@include('../assets/phone.svg')</span>
+        <a href="mailto:depthsseo@yandex.ru">depthsseo@yandex.ru</a>
+      </div>
+    </div>
+  </div>
 </nav>
