--- a/src/html-components/Footer/index.html
+++ b/src/html-components/Footer/index.html
@@ -81,10 +81,10 @@
 
   <div class="footer__bg-image">
     <picture>
-      <source media="(min-width: 960px)" srcset="../assets/footer-bg_lg.jpg">
-      <source media="(min-width: 620px)" srcset="../assets/footer-bg_md.jpg">
-      <source srcset="../assets/footer-bg_sm.jpg">
-      <img src="../assets/footer-bg_sm.jpg" alt="" />
+      <source media="(min-width: 960px)" srcset="./assets/footer-bg_lg.jpg">
+      <source media="(min-width: 620px)" srcset="./assets/footer-bg_md.jpg">
+      <source srcset="./assets/footer-bg_sm.jpg">
+      <img src="./assets/footer-bg_sm.jpg" alt="" />
     </picture>
   </div>
 </footer>
