--- a/src/html-components/Footer2/index.html
+++ b/src/html-components/Footer2/index.html
@@ -14,7 +14,7 @@
         </form>
       </div>
 
-      <img class="img-message-decore" src="../assets/icon-sendmail.png" alt="mail">
+      <img class="img-message-decore" src="./assets/icon-sendmail.png" alt="mail">
     </div>
   </div>
 
