--- a/src/html/blog-item-media.html
+++ b/src/html/blog-item-media.html
@@ -18,7 +18,7 @@
 
               <div class="news-context">
                 <div class="news-context__main-image">
-                  <img src="../assets/image/main-news-image.jpg" alt="">
+                  <img src="./assets/image/main-news-image.jpg" alt="">
                 </div>
 
                 <div class="news-context__text">
@@ -48,14 +48,14 @@
                 </div>
 
                 <div class="news-context__images-wrapper">
-                  <img src="../assets/image/sm-news-img-1.jpg" alt="">
-                  <img src="../assets/image/context.jpg" alt="">
-                  <img src="../assets/image/sm-news-img-2.jpg" alt="">
+                  <img src="./assets/image/sm-news-img-1.jpg" alt="">
+                  <img src="./assets/image/context.jpg" alt="">
+                  <img src="./assets/image/sm-news-img-2.jpg" alt="">
                 </div>
 
                 <div class="video-payer">
                   <video data-isplayed="false" id="videoPlayer">
-                    <source src="../assets/video/movie.mp4">
+                    <source src="./assets/video/movie.mp4">
                   </video>
 
                   <button class="btn-video">
