--- a/src/html/blog-item.html
+++ b/src/html/blog-item.html
@@ -18,7 +18,7 @@
 
             <div class="news-context">
               <div class="news-context__main-image">
-                <img src="../assets/image/main-news-image.jpg" alt="">
+                <img src="./assets/image/main-news-image.jpg" alt="">
               </div>
 
               <div class="news-context__text">
