--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -33,43 +33,43 @@
 
             <div class="contacts__team">
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Святослав',
                 position: 'Иллюстратор',
                 skills: '<li>Adobe Photoshop</li><li>Adobe Illustration</li><li>Adobe Illustration</li><li>Adobe Photoshop</li>'
               })
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Artur',
                 position: 'Front-End',
                 skills: '<li>JavaScript</li><li>HTML</li><li>CSS</li><li>Figma</li>'
               })
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Yura',
                 position: 'Advertising',
                 skills: '<li>Google</li><li>Analitics</li><li>SEO</li><li>Figma</li>'
               })
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Кот',
                 position: 'Животное',
                 skills: '<li>Мяу</li><li>Мур</li><li>Шшшш</li><li>Кусь</li><li>Пьёт молоко</li>'
               })
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Святослав',
                 position: 'Иллюстратор',
                 skills: '<li>Adobe Photoshop</li><li>Adobe Illustration</li><li>Adobe Illustration</li><li>Adobe Photoshop</li>'
               })
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Гена',
                 position: 'Front-End',
                 skills: '<li>JavaScript</li><li>HTML</li><li>CSS</li><li>Figma</li>'
               })
               @@include('./TeammateCard/index.html', {
-                imageSrc: '../assets/image/team-persone-image.jpg',
+                imageSrc: './assets/image/team-persone-image.jpg',
                 name: 'Yura',
                 position: 'Advertising',
                 skills: '<li>Google</li><li>Analitics</li><li>SEO</li><li>Figma</li>'
