--- a/src/html/inedx.html
+++ b/src/html/inedx.html
@@ -84,14 +84,14 @@
               })
   
               <div class="partners__logos-wrapper">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-1.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-2.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-3.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-4.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-5.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-6.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-7.png" alt="">
-                <img class="logo-item" src="../assets/partners-logos/p-logo-8.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-1.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-2.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-3.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-4.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-5.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-6.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-7.png" alt="">
+                <img class="logo-item" src="./assets/partners-logos/p-logo-8.png" alt="">
               </div>
             </div>
           </section>
