--- a/src/html/website-development.html
+++ b/src/html/website-development.html
@@ -147,7 +147,7 @@
         <article class="article-data-science">
           <div class="container">
             <div class="article-data-science__wrapper">
-              <img src="../assets/loptop.png" alt="">
+              <img src="./assets/loptop.png" alt="">
 
               <div class="article-data-science__content">
                 <h2 class="title">
@@ -169,7 +169,7 @@
         <article class="article-outsourcing">
           <div class="container">
             <div class="article-outsourcing__wrapper">
-              <img src="../assets/outsourse.png" alt="">
+              <img src="./assets/outsourse.png" alt="">
 
               <div class="article-data-science__content">
                 <h2 class="title">
@@ -188,7 +188,7 @@
         <article class="article-crm">
           <div class="container">
             <div class="article-crm__wrapper">
-              <img src="../assets/icone-crm-yes.png" alt="">
+              <img src="./assets/icone-crm-yes.png" alt="">
           
               <div class="article-data-science__content">
                 <h2 class="title">
