--- a/src/html/website-promotion.html
+++ b/src/html/website-promotion.html
@@ -231,7 +231,7 @@
             </div>
 
             <div class="scuba-diver-wrap">
-              <img src="../assets/diver.png" alt="">
+              <img src="./assets/diver.png" alt="">
             </div>
           </section>
         </div>
@@ -257,22 +257,22 @@
 
           <div class="slick-slider">
             <div class="slider-item">
-              <img src="../assets/instruments-logo/instrumen-2.png" alt="">
+              <img src="./assets/instruments-logo/instrumen-2.png" alt="">
             </div>
             <div class="slider-item">
-              <img src="../assets/instruments-logo/instrumen-5.png" alt="">
+              <img src="./assets/instruments-logo/instrumen-5.png" alt="">
             </div>
             <div class="slider-item">
-              <img src="../assets/instruments-logo/instrumen-1.png" alt="">
+              <img src="./assets/instruments-logo/instrumen-1.png" alt="">
             </div>
             <div class="slider-item">
-              <img src="../assets/instruments-logo/instrumen-4.png" alt="">
+              <img src="./assets/instruments-logo/instrumen-4.png" alt="">
             </div>
             <div class="slider-item">
-              <img src="../assets/instruments-logo/instrumen-3.png" alt="">
+              <img src="./assets/instruments-logo/instrumen-3.png" alt="">
             </div>
             <div class="slider-item">
-              <img src="../assets/instruments-logo/instrumen-2.png" alt="">
+              <img src="./assets/instruments-logo/instrumen-2.png" alt="">
             </div>
           </div>
         </div>
