--- a/src/html/website-promotion.html
+++ b/src/html/website-promotion.html
@@ -24,7 +24,7 @@
             <div class="promotion__subtitle">
               <p>Команда DepthsSeo готова провести комплекс SEO работ по продвижению сайта.</p>
               <br>
-              <p>Вы хотите улучшить свой ресурс и лидировать в своем сегменте рынка?
+              <p>Вы хотите улучшить свой ресурс и лидировать в своем сегменте рынка? <br>
                 Позвоните нам или заполните форму. Мы проведем бесплатный SEO аудит Вашего сайта и предложим комплекс решений исходя
                 из задач Вашего бизнеса.
               </p>
@@ -56,11 +56,11 @@
               <div class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Контекстная реклама 
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Используйте инструменты платного продвижения. <br>
+                    Усильте свои позиции!
                   </div>
                 </div>
 
@@ -72,11 +72,12 @@
               <div class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Social Media Marketing
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Заявите о себе в соцмедиа (SMM). <br>
+                    Разговаривайте с Вашей аудиторией на одном языке.
+
                   </div>
                 </div>
 
@@ -88,11 +89,11 @@
               <div class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Аудит сайта
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Поможет улучшить сайт. <br>
+                    Вы уверены, что Ваш сайт соответствует ключевым требованиям SEO?
                   </div>
                 </div>
 
@@ -104,11 +105,11 @@
               <div class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Аналитика 
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Прозрачная аналитика сводных данных по сайту. <br>
+                    Проверим кто ваш посетитель?
                   </div>
                 </div>
 
@@ -120,11 +121,11 @@
               <div class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Айдентика
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Фото и видео контент. <br>
+                    Полный комплекс работ по созданию уникального стиля для Вашего бизнеса.
                   </div>
                 </div>
 
@@ -136,11 +137,12 @@
               <div class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Юзабилити 
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Анализ юзабилити сайта.
+                    Вы уверены, что всем комфортно работать 
+                    с Вашим сайтом?
                   </div>
                 </div>
 
@@ -152,11 +154,11 @@
               <div class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Копирайтинг 
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Увы не каждый текст интересен посетителям сайта и поисковым роботам.
+                    Мы создаем, продающие тексты.
                   </div>
                 </div>
 
@@ -168,11 +170,11 @@
               <div class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Мониторинг инфополя
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Узнайте о чем говорят обсуждая ваш бренд. <br>
+                    Управляйте репутацией и нивелируйте риски.
                   </div>
                 </div>
 
@@ -184,11 +186,11 @@
               <div class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Выход на новые рынки
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Расширьте географию продаж. <br>
+                    Работайте с новым клиентами за границей.
                   </div>
                 </div>
 
@@ -200,11 +202,11 @@
               <div class="skill-item-wraper skills-item__left">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    Создание сайтов
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Хотите собственный сайт?<br>
+                    Создаем уникальные сайты решающие актуальные для Вас задачи.
                   </div>
                 </div>
 
@@ -216,11 +218,11 @@
               <div class="skill-item-wraper skills-item__right">
                 <div class="skills-tree__item">
                   <div class="title">
-                    Search Engine Optimization
+                    CRM-система
                   </div>
                   <div class="text">
-                    Комплекс SEO работ. <br>
-                    Хотите на первую страницу в поисковой выдаче? 
+                    Нужна современная и простая в управлении CRM-система?<br>
+                    Примените эффективное решение.
                   </div>
                 </div>
 
