add animate menu

--- a/src/html/inedx.html
+++ b/src/html/inedx.html
@@ -3,14 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./Header/index.html', {
-        title: 'SEO продвижение Вашего сайта',
-        subtitle: 'Приумножьте свой бизнес используя опыт команды DepthsSEO!',
-        imgSizeSmPath: './assets/header-bg_sm.jpg',
-        imgSizeMdPath: './assets/header-bg_md.jpg',
-        imgSizeLgPath: './assets/header-bg_lg.jpg',
-        imgDefault: './assets/header-bg_lg.jpg'
-      })
+      @@include('./HeaderAnimation/index.html')
 
       <main>
         <div class="main-page">
