--- a/src/html-components/Header/index.html
+++ b/src/html-components/Header/index.html
@@ -1,6 +1,6 @@
-<header class="header">
+<header class="header header_absolute-navigation">
   @@include('./Header/Contacts/index.html')
-  <div class="container">
+  <div class="container container_absolute">
     @@include('./Header/Nav/index.html')
 
     <div class="header__content">
