--- a/src/html-components/Header/index.html
+++ b/src/html-components/Header/index.html
@@ -1,21 +1,10 @@
-<header class="header header_absolute-navigation">
-  @@include('./Header/Contacts/index.html')
-  <div class="container container_absolute">
-    @@include('./Header/Nav/index.html')
-
-    <div class="header__content">
-      <h1 class="title">@@title</h1>
-      <p class="subtitle">@@subtitle</p>
+<header class="header">
+  <div class="header-content-nav">
+    @@include('./Header/Contacts/index.html')
+    <div class="nav-menu">
+      <div class="container">
+        @@include('./Header/Nav/index.html')
+      </div>
     </div>
-  </div>
-  <div class="header__bg-image">
-    <picture>
-      <source media="(min-width: 1024px)"
-              srcset="@@imgSizeLgPath">
-      <source media="(min-width: 440px)"
-              srcset="@@imgSizeMdPath">
-      <source srcset="@@imgSizeSmPath">
-      <img src="@@imgDefault" alt=""/>
-    </picture>
   </div>
 </header>
