--- a/src/html/faq.html
+++ b/src/html/faq.html
@@ -3,7 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./Header/index.html', {
+      @@include('./HeaderWithContent/index.html', {
         title: 'FAQ',
         subtitle: 'Ответы, на те самые вопросы',
         imgSizeSmPath: './assets/header-bg-3_sm.jpg',
