--- a/src/html/website-development.html
+++ b/src/html/website-development.html
@@ -3,7 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper green-theam">
-      @@include('./Header/index.html', {
+      @@include('./HeaderWithContent/index.html', {
         title: 'Разработка сайтов',
         subtitle: 'Создаем уникальные сайты',
         imgSizeSmPath: './assets/header-page-2-bg_sm.jpg',
