--- a/src/html/blog-item-media.html
+++ b/src/html/blog-item-media.html
@@ -3,7 +3,7 @@
     @@include('./utils/head.html')
     <body>
       <div class="wrapper">
-        @@include('./HeaderNoImage/index.html')
+        @@include('./Header/index.html')
 
         <main>
           <div class="container">
