--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -3,7 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./Header/index.html', {
+      @@include('./HeaderWithContent/index.html', {
         title: 'Блог о SEO',
         subtitle: 'О самом интересном',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
