--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -3,7 +3,7 @@
   @@include('./utils/head.html')
   <body>
     <div class="wrapper">
-      @@include('./Header/index.html', {
+      @@include('./HeaderWithContent/index.html', {
         title: 'Контакты',
         subtitle: 'Свяжитесь с нами',
         imgSizeSmPath: './assets/header-bg_sm.jpg',
